kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-app-service
  labels:
    app: welcome-app
spec:
  selector:
    app: welcome-app
  ports:
  - port: 8000
    targetPort: 5000
    protocol: TCP
    name: http
  type: ClusterIP
